Changes to insurance REST api, validation, service
Fixed the select style issues on edit screen.  Fixed select tab order.
Fixed the policy_type not populating and the insurance provider field not
populating on edit.  Made several of the dropdowns use the select2 code for
styling / UX consistency.

Changed all insurance policy api endpoints to use patient uuid instead of pid
as that's what the code uses.

Removed the POST and PUT /api/patient/{pid}/insurance/{type} endpoint as it
never worked so we can follow REST endpoint best practices

Implemented PUT /api/patient/{puuid}/insurance/{insuranceUuid} for updating an
insurance policy.

Implemented POST /api/patient/{puuid}/insurance for creating a new insurance policy

Added ACL security checks to the insurance policy creation to match what the
insurance edit in demographics uses. POST must have patients/demo[write|addonly]
and PUT must have patients/demo[write]

Implemented a ListOptionRule that will validate against the list_options table
to make sure that the provided value exists in the list.  Its a primitive
implementation with no caching or performance optimizations and hits the
database on each go.  Wrote unit tests for this and created an
OpenEMRParticleValidator that extends the ParticleValidator in order to use
our own custom rules in the future for API validation.  Used this in an updated
CoverageValidator.

Had to modify the Validator class so we can override the internal validator
that is used.

Added copyright / descriptions everywhere.

Created InsurancePolicyTypes constant for the 837p standard policy types for
insurance policies.

Updated CCDA insurance data import process to utilize the refactored
InsuranceService class.

Changed up the InsuranceService class to validate the data in the update/insert
process to make sure we only are dealing with valid data.

Added to the rest config authorization_check for aclPermission to allow
specific ACL permissions.
